# debezium

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKTOBERFEST.md  LICENSE  Makefile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  ruff.toml
.github/: hacktoberfest.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hacktoberfest.md
.github/workflows/: ci.yml  hacktoberfest.yml
app/: main.py  settings.py
app/internal/: connection_manager.py  consumer.py
app/routes/: websockets.py
app/static/: script.js  styles.css
app/templates/: index.html
docs/bruno_requests/Debezium/: Create Connector.bru  DEL Connector.bru  GET Connector Name Status.bru  GET Connector Name.bru  GET Connector plugins.bru  GET Connectors.bru  bruno.json
docs/queries/: queries.sql
